_sass/catalog.scss
/* ... */
.pattern-image-overlay {
  opacity: 0.2;
  width: 60%;
  object-fit: contain;
  position: absolute;
  margin-left: 5%;
  border-radius: 15px;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}
.card-overlay {
  position: relative;
  width: 220px;
  height: 250px;
  // padding: 20px;
  border-radius: 15px;
  border: 0;
  background: rgba(0, 0, 0, 0.7) !important;
  box-shadow: 2px 2px 6px 0px #00d3a9;
  margin-bottom: 20px;
}
.overlay-text {
  position: absolute;
  top: 40%;
  left: 50%;
  color: white;
  font-size: 19px;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  z-index: 2;
  white-space: wrap;
}
.pattern-id-overlay {
  position: absolute;
  bottom: .5rem;
  right: 0;
  padding-top: 10px;
  margin-right: 14px;
  color: white;
  opacity: 0.7;
}
.catalog {
  padding-top: 5rem;
  display: flex;

  & .row{
    display: flex;
    flex-wrap: wrap;
    flex: 0 0 75%;
    gap: 1rem;
    justify-content: space-around;
    height: fit-content;
  }

  @media (max-width:770px) {
    flex-direction: column;
  }
}

.modal-h3 {
  font-weight: bold;
  font-size: 1.1rem !important;
  text-transform: uppercase;

}

p {
  font-family: "Qanelas Soft", "Open Sans", "sans-serif";
  -webkit-font-smoothing: antialiased;
  font-size: 1.1rem;
}
.inner-span {
  font-size: 16px;
  position: relative;
  color: black;
}
.column:has(.card) {
  // float: left;
  // padding: 0 10px;
  display: block;
  // margin: 0 1rem;
}
.column{
  display: none;
}
.smp-overlay {
  width: 16px;
  bottom: 0;
  right: 0;
  opacity: 0.7;
  vertical-align: middle;
  padding-right: 1px;
}
.smp {
  width: 16px;
  bottom: 0;
  right: 0;
  vertical-align: middle;
  padding-right: 1px;
}

.import {
  background-color: #00b39fff;
  color: white;
  border-radius: 4px;
  border: none;
  padding: 10px;
  cursor: pointer;
}
.import-disabled {
  background-color: #aaa;
  color: white;
  border-radius: 4px;
  border: none;
  padding: 10px;
}

.btn-tooltip-grp {
  display: flex;
  flex-direction: row;
  position: relative;
}

.vertical-center {
  -ms-transform: translateY(-60%);
  transform: translateY(25%) translateX(0%);
}
/* Clear floats after the columns */

.disabled-label {
  color: #aaa;
}

.dropdown-icon {
  width: 20px;
  vertical-align: middle;
  padding: 2px;
}

/* CARD-STYLES */
.pattern-type {
  cursor: inherit;
  display: flex-start;
  align-items: center;
  user-select: none;
  white-space: nowrap;
  padding-left: 12px;
  padding-right: 12px;
  color: var(--color-secondary-dark);
}
.chip {
  display: inline-flex;
  flex-direction: row-reverse;
  float: right;
  // margin: 4px;
  // background-color: rgb(182, 215, 168);
  background-color: var(--brand-color-primary);
  border: none;
  cursor: default;
  height: 1.5rem;
  outline: none;
  padding-left: 5px;
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
  white-space: nowrap;
  align-items: center;
  border-top-right-radius: 16px;
  border-bottom-left-radius: 16px;
  vertical-align: middle;
  text-decoration: none;
  justify-content: center;
}

.category-label {
  display: inline;
  font-family: "Open Sans", sans-serif;
  font-weight: normal;
  white-space: nowrap;
  border-radius: 1rem;
  background-color: #b6d7a8ff;
  padding: 0.5rem;
  margin: auto;
}

.chip-modal {
  align-self: flex-end;
  float: right;
  box-shadow: 2px 2px 6px grey;
}

.pattern-name {
  color: var(--color-secondary-light);
  font-weight: 1400;
  font-style: bold;
  width: calc(80%);
  margin: auto;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  padding: 15px 0 15px 0;
}
.pattern-id {
  position: absolute;
  bottom: .5rem;
  right: 0;
  left: 0;
  margin: auto;
  color: var(--color-secondary-light);
  // margin: 0 3px 3px 0;
}
.pattern-image-container {
  display: flex;
  justify-content: center;
}
.pattern-image {
  width: 60%;
  object-fit: contain;
  position: absolute;
}
.patterns-coming-soon {
  max-width: 70%;
  position: relative;
  float: right;
  z-index: 2;
  margin-top: -2.5rem;
  margin-right: -2rem;
  transform: translateY(0%) translateX(0%) rotate(10deg);
  -webkit-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -moz-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -ms-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -o-transform: translateY(0%) translateX(-0%) rotate(10deg);
}

.hidden {
  visibility: hidden;
}

.external-link {
  width: 1rem;
  padding-bottom: 0.5rem;
}

.external-link img {
  content: url('../assets/images/buttons/external-link_black.svg');
}

.external-link:hover img {
  content: url('../assets/images/buttons/external-link_green.svg');
}

/* CHECKBOX-STYLES */
.filter-wrap {
  // float: left;
  flex:0 0 25%;
  width: 23%;
  padding: 4px;
  border-radius: 15px;
  // margin-top: 5rem;
  // backgroud:var(--background-grey);
  height: fit-content; /* height needs to be increased with regarding to the total no. of patterns */
  .load-more {
    display: none;
  }
}
label {
  display: block;
  padding-left: 15px;
  text-indent: -15px;
}

input {
  width: 20px;
  height: 20px;
  padding: 3px;
  margin: 0;
  vertical-align: middle;
  position: relative;
  top: -1px;
  display: inline;
}
input[type="checkbox"] {
  margin: 0;
}

/* MODAL-STYLES */
.modal-window {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.75);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 200;
  opacity: 0;
  pointer-events: none;
  transition: all 0.3s;
}
.modal-image {
  width: 220px;
  margin: 30px 30px 2rem 0px;
  float: left;
  height: 100%;
}
::-webkit-scrollbar {
  display: "none";
}
/* ... */

